--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -63,6 +63,10 @@ general {
     layout = dwindle
 }
 
+cursor {
+  inactive_timeout = 2
+}
+
 decoration {
     rounding = 2
     rounding_power = 2
